# UnrealMCPHub

./: .gitignore  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: README.zh-CN.md
docs/unreal-ai-playbook/: README.zh-CN.md  benchmark-artifact-guidelines.zh-CN.md  benchmark-artifact-template.zh-CN.md  benchmark-lite-plan.zh-CN.md  current-status-summary.zh-CN.md  fork-status-summary.zh-CN.md  gym-feasibility-report.zh-CN.md  internal-project-agent-guide.zh-CN.md  long-term-memory-framework.zh-CN.md  long-term-memory-test-cases.zh-CN.md  playable-game-validation-plan.zh-CN.md  remote-mcp-generic-roadmap.md  rules.md  runtime-validation-matrix.zh-CN.md  skill-architecture-v2.zh-CN.md  skills-candidate-map.zh-CN.md  todo.md  unreal-capability-gym.zh-CN.md  vampire-survivors-benchmark-pass.zh-CN.md  vampire-survivors-roadmap.zh-CN.md  workflow.md
skills/analyze-unreal-project-stack/: SKILL.md
skills/team-unreal-workflow/: SKILL.md
skills/ue-benchmark/: SKILL.md
skills/unrealhub-developer/: SKILL.md
skills/use-unrealhub/: SKILL.md  benchmark-v1.md
src/unrealhub/: __init__.py  benchmark_lite.py  cli.py  config.py  preflight.py  server.py  state.py  ue_client.py  watcher.py
tests/: conftest.py  test_benchmark_lite.py  test_build_tools.py  test_cli.py  test_config.py  test_discovery_tools.py  test_install_tools.py  test_log_tools.py  test_preflight.py  test_process.py  test_proxy_tools.py  test_server.py  test_session_tools.py  test_state.py  test_ue_client.py  test_ue_paths.py  test_watcher.py  test_zombie_cleanup.py
(+57 files in other folders)
