[project]
name = "unrealhub"
version = "0.1.0"
description = "UnrealMCPHub - Central management platform for Unreal Engine MCP instances"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.25.0",
    "httpx>=0.27",
    "psutil>=6.0",
    "click>=8.1",
    "uvicorn>=0.30",
    "pydantic>=2.0",
]

[project.scripts]
unrealhub = "unrealhub.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unrealhub"]
